# Relativa

./: .env.example  .gitattributes  .gitignore  AI-GUIDES-INDEX.md  BENEFITS.md  BENEFITS_UA.md  CLAUDE.md  CONTRIBUTORS.md  DATABASE.md  DOCKER-BUILD.md  FRONTEND-HANDOFF.md  README.md  SCALAR-GUIDE.md  SETUP-GUIDE.md  TestR.bat  docker-compose.yaml
.github/: CODEOWNERS  pull_request_template.md
Audit/: Dockerfile  README.md  Relativa.Audit.sln
Authentication/: Dockerfile  README.md  Relativa.Authentication.sln
Client/: .editorconfig  Dockerfile  README.md  index.html  package-lock.json  package.json  redirect.html  tailwind.config.js  vite.config.ts
Core/: .editorconfig  Dockerfile  README.md  Relativa.Core.sln
ENDPOINTS/: ENDPOINTS_ENG.md  ENDPOINTS_UA.md  POSSIBLE_PRO_VERSION_ENDPOINTS.md  POSSIBLE_PRO_VERSION_ENDPOINTS_UA.md
Gateway/: Dockerfile  README.md  Relativa.Gateway.sln
Graph/: Dockerfile  README.md  Relativa.Graph.sln
ML/: .editorconfig  Dockerfile  README.md  manage.py  pyproject.toml
ML/data/: synthetic_churn.csv  synthetic_closure.csv
ML/ml_api/: apps.py  recalculate_service.py  tests.py  urls.py  views.py
ML/ml_api/management/commands/: run_domain_consumer.py  run_graph_score_consumer.py  run_recalculate_consumer.py
ML/ml_api/models/: churn_model.pkl  closure_model.pkl
ML/relativa_ml/: asgi.py  ml_constants.py  settings.py  urls.py  wsgi.py
ML/scripts/: eda_comparison.py  run_api_and_consumer.sh  train_models.py
Migration/: .dockerignore  Dockerfile  README.md  Relativa.Migration.sln  entrypoint.sh
TestR/: Invoke-TestR.ps1  (+2 more)
(+933 files in other folders)
